--- a/app/src/main/res/layout/activity_menu_pedidos.xml
+++ b/app/src/main/res/layout/activity_menu_pedidos.xml
@@ -63,20 +63,56 @@
         android:background="@color/gris"
         app:layout_constraintBottom_toTopOf="@+id/pies"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cabezera"
-        app:layout_constraintVertical_bias="0.5">
+        app:layout_constraintVertical_bias="0.0">
+
+        <TextView
+            android:id="@+id/tvlatitud"
+            android:layout_width="286dp"
+            android:layout_height="44dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.738" />
+
+        <TextView
+            android:id="@+id/tvdireccion"
+            android:layout_width="285dp"
+            android:layout_height="47dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.492"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvlongitud"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/tvlongitud"
+            android:layout_width="286dp"
+            android:layout_height="40dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvlatitud"
+            app:layout_constraintVertical_bias="0.01" />
 
         <ListView
             android:id="@+id/lvBowlsSeleccionados"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="405dp"
+            android:layout_height="321dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintVertical_bias="0.024" />
         />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
