--- a/app/src/main/res/layout/activity_menu_pedidos.xml
+++ b/app/src/main/res/layout/activity_menu_pedidos.xml
@@ -20,8 +20,8 @@
 
         <Button
             android:id="@+id/Volver"
-            android:layout_width="101dp"
-            android:layout_height="57dp"
+            android:layout_width="110dp"
+            android:layout_height="47dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:autoText="false"
@@ -37,7 +37,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="1.0" />
 
         <Button
             android:id="@+id/Menu"
@@ -53,7 +53,7 @@
             app:layout_constraintHorizontal_bias="0.921"
             app:layout_constraintStart_toEndOf="@+id/Volver"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.542" />
+            app:layout_constraintVertical_bias="1.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -112,7 +112,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.024" />
+            app:layout_constraintVertical_bias="0.213" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="Lista de Pedido"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="20dp" />
         />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -138,7 +148,7 @@
             app:layout_constraintHorizontal_bias="0.981"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.941" />
+            app:layout_constraintVertical_bias="0.058" />
 
         <Button
             android:id="@+id/Maps"
@@ -151,6 +161,6 @@
             app:layout_constraintHorizontal_bias="0.071"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.941" />
+            app:layout_constraintVertical_bias="0.058" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
